# OrthancOHIF-1.0

./: .gitignore  .hg_archival.txt  .hgignore  CMakeLists.txt  NEWS  README
.github/workflows/: c-cpp.yml  ohif-compile.yml
.reuse/: dep5
Resources/: CreateOHIFDist.sh  EmbedStaticAssets.py  SyncOrthancFolder.py
Resources/CreateOHIFDist/: Dockerfile  build.sh
Sources/: OrthancExplorer.js  Plugin.cpp  app-config-system.js  app-config-user.js
